--- a/ppx_deriving.opam
+++ b/ppx_deriving.opam
@@ -17,6 +17,7 @@ depends: [
   "ocaml" {>= "4.05.0"}
   "dune" {>= "1.6.3"}
   "cppo" {build}
+  "ocamlfind"
   "ppx_derivers"
   "ppxlib" {>= "0.18.0"}
   "result"
